# minicraft

./: .gitignore  CMakeLists.txt  PERIVATE_README.md  README.md
app/: CMakeLists.txt  minicraft.cpp
assets/: color.fs  texture.fs  texture.vs  texture_face_id.fs  texture_face_id.vs
cmake/: mc-add-app.cmake  mc-add-lib.cmake  mc-set-compiler-flags.cmake
config/: block_property.json  block_type.json
demo/: CMakeLists.txt
demo/001_single_block/: CMakeLists.txt  single_block.cpp
demo/002_single_chunk/: CMakeLists.txt  single_chunk.cpp
demo/003_world/: CMakeLists.txt  world.cpp
demo/004_cute/: CMakeLists.txt  cute.cpp
demo/005_cute/: CMakeLists.txt  cute_f.cpp
doc/: README_MAC.md  README_WINDOWS.md
lib/: CMakeLists.txt  block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  color.cpp  color.h  error_handler.h  geology_generator.h  mesh.h  noise.cpp  noise.h  operator.cpp  operator.h  optimization.h  render.cpp  render.h  shader.cpp  shader.h  terrain_generator.cpp  terrain_generator.h  vertex_format.h  vertex_info.cpp  vertex_info.h  window.cpp  window.h  world.cpp  world.h
lib/debug/: utils.h
shaders/: vertex_shader.glsl
test/: CMakeLists.txt  block_test.cpp  chunk_test.cpp  mc_test.cpp
tools/codegen/: gen_block.py
tools/imgproc/: concat.py  resize.py  transparent.py
tools/texture/: texture.py
tools/visualization/: CMakeLists.txt  visualization.cpp
